# Todo-list-API

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  dockerfile  env.example  pyproject.toml  requirements.txt  run.py
dosc/ru/: README.md
src/: app.py
src/config/: base_config.py  logging_confing.py
src/db/: __init__.py  database.py
src/dto/: __init__.py  tododto.py  tokendto.py  userdto.py
src/exceptions/: __init__.py  routers_exceptions.py  services_exceptions.py
src/migration/: env.py
src/migration/versions/: 0ab6507f4c96_initial_revision.py  af2a82df5f45_add_refreshtokenmodel_refresh_tokens_.py
src/models/: __init__.py  refresh_token_model.py  todo_model.py  user_model.py
src/repositories/: __init__.py  base_repo.py  todo_repo.py  token_repo.py  user_repo.py
src/routes/: __init__.py  auth_router.py  dependencies.py  todos_router.py
src/schemas/: __init__.py  jwt_token_schemas.py  query_schemas.py  todo_schemas.py  user_schemas.py
src/services/: __init__.py  auth_service.py  common_func.py  jwt_service.py  todo_service.py  user_service.py
tests/: conftest.py
tests/test_repositories/: conftest.py  test_todo_repository.py  test_token_repository.py  test_user_repository.py
tests/test_services/: test_auth_service.py  test_common_func.py  test_jwt_service.py
