[project]
name = "API-example-app-todo-list"
version = "0.1.1"
description = "Simple todo list API"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi[all]>=0.115.8",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.1",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
test = [
    "aiosqlite>=0.21.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
